--- a/demo.html
+++ b/demo.html
@@ -31,7 +31,7 @@ textarea {
 
 <script>
   var cors_api_url = 'https://cors-anywhere.herokuapp.com/';
-  var target_url = 'https://showroom-api.zyrohost.my.id/api/jkt48';
+  var target_url = 'https://showroom-api.zyrohost.my.id/api/showroom';
 
   function fetchAndDisplayResult() {
     var x = new XMLHttpRequest();
